# rss_feeder

./: README.md  pyproject.toml
config/: rss_feeds_config.json
src/: add_feed.py  display_feed.py  entrypoint.py  main.py  update_feed.py  utils.py
