[tool.poetry]
name = "rss_feeder"
version = "0.1.0"
description = "Streamlit application that collect and organize rss feeds for news curation."
authors = ["kevinl75 <kevin.letupe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
feedparser = "^6.0.11"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
